updated for improvement of color contrast issues

--- a/project/styles/small.css
+++ b/project/styles/small.css
@@ -708,7 +708,7 @@ dialog#mydialog {
   max-width: 400px;
   width: 90%;
   background-color: var(--bg-color);
-  color: var(--txt-color);
+  color: var(--secondary-color);
   position: fixed;
   top: 50%;
   left: 50%;
@@ -725,7 +725,7 @@ dialog#mydialog div {
 dialog#mydialog h3 {
   margin: 0;
   font-size: 1.5rem;
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 dialog#mydialog p {
